--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>echo – Client Info</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
@@ -10,10 +10,12 @@
 <header>
     <div class="logo" aria-hidden="true">🪞</div>
     <h1>echo</h1>
-    <p class="subtitle">Your digital mirror – see what your client reveals</p>
+    <p class="subtitle">Your digital mirror — everything your browser tells the world</p>
 </header>
 
-<main id="app"></main>
+<main>
+    <div id="app" class="info-grid"></div>
+</main>
 
 <footer>
     <p>© 2025 <strong>echo</strong> — built with ❤ for developers</p>
