--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <header>
     <div class="logo" aria-hidden="true">🪞</div>
     <h1>echo</h1>
+    <h2 class="red">No data is logged. This is for demonstration purposes only</h2>
     <p class="subtitle">Your digital mirror — everything your browser tells the world</p>
 </header>
 
